fix spillover

--- a/style.css
+++ b/style.css
@@ -197,10 +197,9 @@ i {
 
 .to {
   background-image: url('img/riverside.jpg');
-  background-size: 100%;
-  background-position: center 25%;
+  background-position: center 15%;
   background-repeat: no-repeat;
-  border-right: 1px ridge #454545;
+  background-size: cover;
 }
 
 .banner1 {
@@ -213,11 +212,6 @@ i {
 
 ul {
   list-style: none;
-}
-
-.banner2 {
-  border-top: 2px ridge #454545;
-  border-bottom: 2px ridge #454545;
 }
 
 
@@ -250,7 +244,7 @@ ul {
   background-repeat: no-repeat;
   opacity: 0.8;
   height: 30rem;
-  margin-top: -15rem;
+  margin-top: -10rem;
   z-index: -1;
 }
 
